--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "untranspiled-js-library-skeleton",
-  "version": "1.0.0",
-  "description": "my skeleton for transpiler-free JS packages",
+  "name": "man",
+  "version": "0.0.0-development",
+  "description": "manpage command for npm, opens package homepage or readme",
   "main": "index.js",
+  "bin": {
+    "npmman": "index.js"
+  },
   "author": "Andy Edwards",
   "license": "MIT",
   "scripts": {
@@ -11,13 +14,10 @@
     "lint:watch": "esw --watch *.js test --cache",
     "prettier": "prettier --write src/**/*.js test/**/*.js",
     "prettier:check": "prettier --list-different src/**/*.js test/**/*.js",
-    "flow": "flow",
-    "flow:coverage": "for file in *.js test/**.js; do echo $file; flow coverage $file; done",
-    "flow:watch": "flow-watch -e js,js.flow,flowconfig --ignore lib/ --ignore node_modules/ --watch .flowconfig --watch *.js --watch test/",
     "test": "cross-env NODE_ENV=production BABEL_ENV=test nyc --reporter=lcov --reporter=text mocha $npm_package_config_mocha",
     "test:watch": "mocha --watch $npm_package_config_mocha",
     "codecov": "nyc report --reporter=text-lcov > coverage.lcov; codecov",
-    "prepublishOnly": "npm run lint && flow && npm test",
+    "prepublishOnly": "npm run lint && npm test",
     "open:coverage": "open coverage/lcov-report/index.html",
     "semantic-release": "semantic-release",
     "travis-deploy-once": "travis-deploy-once"
@@ -25,7 +25,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -e $GIT_PARAMS",
-      "pre-commit": "lint-staged && npm run lint && flow",
+      "pre-commit": "lint-staged && npm run lint",
       "pre-push": "npm test"
     }
   },
@@ -51,30 +51,28 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jedwards1211/untranspiled-js-library-skeleton.git"
+    "url": "https://github.com/jedwards1211/man.git"
   },
   "keywords": [
-    "skeleton"
+    "manpage",
+    "readme",
+    "documentation"
   ],
   "bugs": {
-    "url": "https://github.com/jedwards1211/untranspiled-js-library-skeleton/issues"
+    "url": "https://github.com/jedwards1211/man/issues"
   },
-  "homepage": "https://github.com/jedwards1211/untranspiled-js-library-skeleton#readme",
+  "homepage": "https://github.com/jedwards1211/man#readme",
   "devDependencies": {
     "@commitlint/cli": "^6.0.2",
     "@commitlint/config-conventional": "^6.0.2",
     "@jedwards1211/commitlint-config": "^1.0.0",
     "@jedwards1211/eslint-config": "^2.0.0",
-    "@jedwards1211/eslint-config-flow": "^1.0.0",
     "chai": "^4.1.2",
     "codecov": "^3.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^4.16.0",
     "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-flowtype": "^2.42.0",
     "eslint-watch": "^3.1.3",
-    "flow-bin": "^0.64.0",
-    "flow-watch": "^1.1.1",
     "husky": "^1.1.4",
     "istanbul": "^0.4.5",
     "lint-staged": "^8.0.4",
@@ -82,7 +80,10 @@
     "nyc": "^11.4.1",
     "prettier": "^1.15.1",
     "prettier-eslint": "^8.8.2",
-    "semantic-release": "^12.4.1",
-    "travis-deploy-once": "^4.3.3"
+    "semantic-release": "^15.13.3",
+    "travis-deploy-once": "^5.0.11"
+  },
+  "dependencies": {
+    "opn": "^5.4.0"
   }
 }
