fix: rename package again

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "npmman",
+  "name": "open-docs",
   "version": "0.0.0-development",
   "description": "manpage command for npm, opens package homepage or readme",
   "main": "index.js",
   "bin": {
-    "npmman": "index.js"
+    "open-docs": "index.js"
   },
   "author": "Andy Edwards",
   "license": "MIT",
@@ -51,7 +51,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jedwards1211/npmman.git"
+    "url": "https://github.com/jedwards1211/open-docs.git"
   },
   "keywords": [
     "manpage",
@@ -59,9 +59,9 @@
     "documentation"
   ],
   "bugs": {
-    "url": "https://github.com/jedwards1211/npmman/issues"
+    "url": "https://github.com/jedwards1211/open-docs/issues"
   },
-  "homepage": "https://github.com/jedwards1211/npmman#readme",
+  "homepage": "https://github.com/jedwards1211/open-docs#readme",
   "devDependencies": {
     "@commitlint/cli": "^6.0.2",
     "@commitlint/config-conventional": "^6.0.2",
